improved, add mtime(), add test

--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "private": true,
   "main": "index.js",
   "version": "0.1.0",
+  "scripts": {
+    "test": "mocha --recursive --bail --reporter list"
+  },
   "dependencies": {
     "misc": "git+ssh://git@git.ac3.com.au:7999/node/misc.git",
     "mkdirp": "^0.5.1",
     "sync": "git+ssh://git@git.ac3.com.au:7999/node/sync.git"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
